--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "openai": "^4.38.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.11.5"
   }
 }
