--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "openai": "^4.38.3",
     "path": "^0.12.7",
